Ya esta el xml de pacientes, farmaceutas y medicos